--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     border-radius: 25px;
     margin: 3% 4%;
     padding: 5%;
-    width: 65vw;
+    width: 25vw;
     -webkit-box-shadow: 7px 10px 25px 0px rgba(148,146,148,1);
     -moz-box-shadow: 7px 10px 25px 0px rgba(148,146,148,1);
     box-shadow: 7px 10px 25px 0px rgba(148,146,148,1);
@@ -17,4 +17,16 @@
 
 .abilities{
     margin: 2%;
+}
+
+@media only screen and (max-width:648px) and (min-width:328px){
+    .pokemon-container>div{
+        border-radius: 25px;
+        margin: 3% 4%;
+        padding: 5%;
+        width: 65vw;
+        -webkit-box-shadow: 7px 10px 25px 0px rgba(148,146,148,1);
+        -moz-box-shadow: 7px 10px 25px 0px rgba(148,146,148,1);
+        box-shadow: 7px 10px 25px 0px rgba(148,146,148,1);
+    }
 }
