--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body{
 .btn-primary{
     background: #E9E929 !important;
     border: 0px;
+    -webkit-box-shadow: 7px 10px 25px 0px #21252966;
+    -moz-box-shadow: 7px 10px 25px 0px #21252966;
+    box-shadow: 7px 10px 25px 0px #21252966;
 }
 .pokemon-container>div{
     border-radius: 5px;
@@ -28,6 +31,9 @@ body{
 
 .PokemonFinder{
     text-align: center;
+    -webkit-box-shadow: 7px 10px 25px 0px #21252966;
+    -moz-box-shadow: 7px 10px 25px 0px #21252966;
+    box-shadow: 7px 10px 25px 0px #21252966;
 }
 
 .pokemon-container{
