--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,12 @@ body{
     margin: 2%;
 }
 
+.locationdiv{
+    display: flex;
+    justify-content: space-between;
+    padding: 3%;
+    border-bottom: 1px solid grey;
+}
 @media only screen and (max-width:648px) and (min-width:328px){
     .pokemon-container>div{
         border-radius: 5px;
