Add some styles at the homepage

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,25 @@ body{
     padding: 3%;
     border-bottom: 1px solid grey;
 }
+
+.btnbuscar:hover{
+    opacity: 0.8;
+}
+
+.btnLocations{
+    background-color: #ED4C5C;
+    color: white !important;
+    border: 0px;
+    border-radius: 7px;
+    padding: 3% 10%;
+    -webkit-box-shadow: 7px 10px 25px 0px #21252966;
+    -moz-box-shadow: 7px 10px 25px 0px #21252966;
+    box-shadow: 3px 3px 10px 0px #21252966;
+}
+
+.btnLocations:hover{
+    opacity: 0.8;
+}
 @media only screen and (max-width:648px) and (min-width:328px){
     .pokemon-container>div{
         border-radius: 5px;
