--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,67 @@
 body{
     background-color: #ED4C5C;
+    margin: 0;
+    padding: 0;
 }
 
 *{
     color: #707070 !important;
 }
 
+.arrow-down1, .arrow-down2{
+    position: absolute;
+    width: 5%;
+    height: 5%;
+    left: 47%;
+    animation: arrow-down 2s alternate infinite;
+}
+
+.arrow-down1{
+    bottom: 50px;
+}
+
+.arrow-down2{
+    bottom: 20px;
+}
+
+
+
+nav{
+    text-align: right;
+}
+nav ul{
+    
+    list-style: none;
+    display: inline-flex;
+    max-width: 700px;
+    min-width: 600px;
+}
+ul > li{
+    margin: 2% 3%;
+}
+
+ul li > a{
+    color: white !important;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 18px;
+}
+.main{
+    align-items: center;
+    width: 99vw;
+    height: 100vh;
+}
+.pokeball{
+    align-items: center;
+    text-align: center;
+    margin: 10%;
+}
+.pokeball img{
+    width: 50vw;
+    height: 50vh;
+    animation: rotate 3s alternate infinite;
+    
+}
 .base_stats_maindiv{
     display: flex;
     justify-content: space-evenly;
@@ -81,5 +137,37 @@ body{
         -webkit-box-shadow: 7px 10px 25px 0px #21252966;
         -moz-box-shadow: 7px 10px 25px 0px #21252966;
         box-shadow: 7px 10px 25px 0px #21252966;
+    }
+
+    nav ul{
+    
+        list-style: none;
+        display: inline-flex;
+        max-width: 700px;
+        min-width: inherit;
+    }
+}
+
+
+@keyframes rotate{
+    0%{
+
+    }
+    50%{
+        transform: rotate(45deg) translateX(15px);
+       
+    }
+    100%{
+        transform: rotate(-45deg) translateX(-15px);
+        
+    }
+}
+
+@keyframes arrow-down{
+    0%{
+
+    }
+    100%{
+        transform: translateY(20px);
     }
 }
